--- a/app.wxss
+++ b/app.wxss
@@ -84,7 +84,7 @@ page {
 
 .titlebar {
   position: fixed;
-  height: 40px;
+  height: 80rpx;
   width: 100%;
   top: 0;
   z-index: 40;
@@ -185,3 +185,21 @@ page {
   padding: 15rpx 25rpx;
   font-size: 30rpx;
 }
+
+.mui-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.mui-ellipsis-2 {
+  display: -webkit-box;
+  overflow: hidden;
+  white-space: normal !important;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+
