--- a/pages/html/home.wxss
+++ b/pages/html/home.wxss
@@ -14,7 +14,6 @@
   background-color: #63b4f0;
 }
 
-
 .hotvideo {
   color: #ff7878;
 }
@@ -33,9 +32,44 @@
 
 .home-dz {
   font-size: 25rpx;
-  color: #666;
+  color: white;
 }
 
 .row-padding {
   font-size: 28rpx;
+}
+
+.lunboImage {
+  background: #000;
+  width: 22vw;
+  height: 22vw;
+  justify-content: center;
+}
+.lunboImage image{
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  opacity: 0.4;
+}
+
+.banner-type{
+  z-index: 1;
+  position: absolute;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px; 
+  color: white;
+  top: 10rpx;
+  left: 15rpx;
+}
+
+.banner-title{
+  z-index: 1;
+  position: absolute;
+  color: white;
+  line-height: 14px;
+  font-size: 12px;
+  font-weight: 100;
+  top: 30px;
+  left: 15rpx;
 }
