--- a/app.wxss
+++ b/app.wxss
@@ -8,6 +8,12 @@ page {
   height: 100%;
   width: 100%;
   position: fixed;
+}
+
+.mask {
+  height: 100%;
+  width: 100%;
+  position: fixed;
   background-color: #000;
   z-index: 8888;
   left: -1rpx;
@@ -20,7 +26,6 @@ page {
   background-color: #000;
   opacity: 0.5;
 }
-
 
 .c-state-1 {
   transform: rotate(0deg) scale(1) translate3d(100%, 0%, 0);
@@ -201,5 +206,3 @@ page {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-
-
