--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -46,14 +46,19 @@
     </view>
   </view>
   <view class="commodity_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></view>
-  <view class="comment_box {{showModalStatus ? 'ct-state-1' : 'ct-state-2'}}" >
-    <view>{{article.niceNum}}条评论</view>
-    <view>{{article.niceNum}}条评论</view>
-    <view>{{article.niceNum}}条评论</view>
-    <view>{{article.niceNum}}条评论</view>
-    <view>{{article.niceNum}}条评论</view>
-    <view>{{article.niceNum}}条评论</view>
-    <view>{{article.niceNum}}条评论</view>
+  <view class="comment_box {{showModalStatus ? 'ct-state-1' : 'ct-state-2'}}">
+    <view class='comment_title_box'>
+      <view class='comment_count'>{{article.niceNum}}条评论</view>
+      <button class='iconfont icon-guanbi comment_closebtn' style='font-size: 30rpx;'></button>
+    </view>
+    <view class='comment_item'>
+      <scroll-view>
+      </scroll-view>
+      <view class='my_comment'>
+        <view>用户名</view>
+        <view wx:if="">回复用户名</view>
+        <view>：评论内容</view>
+      </view>
+    </view>
   </view>
 </view>
-
