--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -49,7 +49,7 @@
   <view class="comment_box {{showModalStatus ? 'ct-state-1' : 'ct-state-2'}}">
     <button class='iconfont icon-guanbi comment_closebtn' style='font-size: 30rpx;' bindtap='commentClose'></button>
     <view class='comment_title_box'>
-      <view class='comment_count'>—— {{article.niceNum}}条评论 ——</view>
+      <view class='comment_count'>— {{article.niceNum}}条评论 —</view>
     </view>
     <scroll-view class='comment_item'>
       <view class='hot_comment'>
@@ -62,7 +62,19 @@
         <text>用户名</text>
         <text wx:if="">@回复用户名</text>
         <text>：评论内容</text>
-        <button class='{{niceClass}}' hover-class="none"></button>
+        <button class='{{item_niceClass}}' hover-class="none"></button>
+      </view>
+       <view class='my_comment'>
+        <text>用户名</text>
+        <text wx:if="">@回复用户名</text>
+        <text>：评论内容</text>
+        <button class='{{item_niceClass}}' hover-class="none"></button>
+      </view>
+       <view class='my_comment'>
+        <text>用户名</text>
+        <text wx:if="">@回复用户名</text>
+        <text>：评论内容</text>
+        <button class='{{item_niceClass}}' hover-class="none"></button>
       </view>
     </scroll-view>
   </view>
