--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -26,7 +26,7 @@
 </view>
 
 <view class="bottom-bar">
-  <input class='bottom-bar-input' placeholder="我来说两句" confirm-type="send" bindconfirm="postComment"></input>
+  <input class='bottom-bar-input' placeholder="我来说两句" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
   <view class='icon-vertical-ab' bindtap='nice'>
     <button class='{{niceClass}}' hover-class="none"></button>
     <view class='icon-text-box' style='left:63vw;'>
@@ -36,13 +36,13 @@
   <view class='icon-vertical' bindtap='tap_comment' style='margin-left:14%'>
     <text class='iconfont icon-interactive_fill myicon'></text>
     <view class='icon-text-box'>
-      <view class='icon-text'>{{article.readTime}}</view>
+      <view class='icon-text'>{{article.cm_count}}</view>
     </view>
   </view>
   <view class='icon-vertical' bindtap='tap_share'>
     <text class='iconfont icon-share_fill myicon'></text>
     <view class='icon-text-box'>
-      <view class='icon-text'>{{article.niceNum}}</view>
+      <view class='icon-text'>0</view>
     </view>
   </view>
   <view class="commodity_screen" bindtap="hideModal" wx:if="{{showModalStatus}}"></view>
@@ -51,14 +51,35 @@
     <view class='comment_title_box'>
       <view class='comment_count'>— {{cmt.length}}条评论 —</view>
     </view>
-    <scroll-view class='comment_item'>
-      <view class='my_comment' wx:for="{{cmt}}" data-bean="{{item}}">
-        <image class='cmt-img-co' src='{{item.publishUserInfo.avatarUrl}}'></image>
-        <text>{{item.publishUserInfo.nickName}}</text>
-        <text wx:if="{{item.commentatorUserInfo.nickName}}">@{{item.commentatorUserInfo.nickName}}</text>
-        <text>{{item.commentDtl}}</text>
-        <button class='{{item.commentDtl}}' hover-class="none"></button>
+    <scroll-view class='scroll-comment comment_item' scroll-y>
+      <view class='my_comment' wx:for="{{cmt}}" wx:key="item.commentId" data-bean="{{item}}">
+        <view class='cmt-flex'>
+          <image class='cmt-img-co' src='{{item.publishUserInfo.avatarUrl}}'></image>
+          <view class='cmt-user'>
+            <view>{{item.publishUserInfo.nickName}}</view>
+            <view style='font-size: 18rpx;color:#999'>{{item.publishDate}}</view>
+          </view>
+          <view bindtap='itemNice' data-index="{{index}}">
+            <button class='{{item.niceClass}}' hover-class="none"></button>
+            <view class='cmt-item-nicecount'>
+              <view>{{item.niceNum}}</view>
+            </view>
+          </view>
+        </view>
+        <view class='cmt-dtl'>
+          <text wx:if="{{item.commentatorUserInfo.nickName}}">@{{item.commentatorUserInfo.nickName}}：</text>
+          <text>{{item.commentDtl}}</text>
+        </view>
+      </view>
+      <view wx:if="{{cmt.length}}" class='comment_title_box'>
+        <view class='comment_count'>— 到底啦 —</view>
+      </view>
+      <view wx:else class='comment_title_box'>
+        <view class='comment_count' style='font-size:30rpx;'>还没有人发言哦~快来抢沙发吧</view>
       </view>
     </scroll-view>
+    <view class="cmt-bottom-bar">
+      <input class='cmt-bottom-bar-input' placeholder="都让开我来开车！" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
+    </view>
   </view>
 </view>
