评论模块完成

--- a/pages/detail/gifdetail.wxml
+++ b/pages/detail/gifdetail.wxml
@@ -1,8 +1,5 @@
 <!--pages/detail/gifdetail.wxml-->
 <view class="page">
-  <!-- 转发底部弹出框 模板 -->
-  <!-- <import src="../../template/actionsheet.wxml" />
-  <template is="actionsheet" data="{{...actionsheet}}" /> -->
   <!-- 正文 -->
   <view class="page-section page-section-spacing">
     <swiper interval="{{interval}}" duration="{{duration}}" previous-margin="{{previousMargin}}px" next-margin="{{nextMargin}}px" bindchange="changePageNum" current='{{current}}'>
@@ -52,12 +49,37 @@
       <view class='comment_count'>— {{cmt.length}}条评论 —</view>
     </view>
     <scroll-view class='scroll-comment comment_item' scroll-y>
-      <view class='my_comment' wx:for="{{cmt}}" wx:key="item.commentId" data-bean="{{item}}">
+      <view wx:if="{{hotCmt}}" class='my_comment'>
+        <view class='cmt-flex'>
+          <image class='cmt-img-co' src='{{hotCmt.publishUserInfo.avatarUrl}}'></image>
+          <view class='cmt-user'>
+            <view>
+              <text>{{hotCmt.publishUserInfo.nickName}}</text>
+              <text class='iconfont icon-fire icon_hot'>热评</text>
+            </view>
+            <view style='font-size: 18rpx;color:#999'>{{hotCmt.publishDateStr}}</view>
+          </view>
+          <view bindtap='itemNice' data-index="{{hotIndex}}">
+            <button class='{{hotCmt.niceClass}}' hover-class="none"></button>
+            <view class='cmt-item-nicecount'>
+              <view>{{hotCmt.niceNum}}</view>
+            </view>
+          </view>
+        </view>
+        <view class='cmt-dtl' bindtap='getCuser' data-cuser="{{hotCmt.publishUserInfo}}">
+          <text wx:if="{{hotCmt.commentatorUserInfo.nickName}}">
+            <text>回复</text>
+          <text style='color:#64A5F3'> @{{hotCmt.commentatorUserInfo.nickName}}：</text>
+          </text>
+          <text>{{hotCmt.commentDtl}}</text>
+        </view>
+      </view>
+      <view class='my_comment' wx:for="{{cmt}}" wx:key="item.commentId">
         <view class='cmt-flex'>
           <image class='cmt-img-co' src='{{item.publishUserInfo.avatarUrl}}'></image>
           <view class='cmt-user'>
             <view>{{item.publishUserInfo.nickName}}</view>
-            <view style='font-size: 18rpx;color:#999'>{{item.publishDate}}</view>
+            <view style='font-size: 18rpx;color:#999'>{{item.publishDateStr}}</view>
           </view>
           <view bindtap='itemNice' data-index="{{index}}">
             <button class='{{item.niceClass}}' hover-class="none"></button>
@@ -66,8 +88,11 @@
             </view>
           </view>
         </view>
-        <view class='cmt-dtl'>
-          <text wx:if="{{item.commentatorUserInfo.nickName}}">@{{item.commentatorUserInfo.nickName}}：</text>
+        <view class='cmt-dtl' bindtap='getCuser' data-cuser="{{item.publishUserInfo}}">
+          <text wx:if="{{item.commentatorUserInfo.nickName}}">
+            <text>回复</text>
+          <text style='color:#64A5F3'> @{{item.commentatorUserInfo.nickName}}：</text>
+          </text>
           <text>{{item.commentDtl}}</text>
         </view>
       </view>
@@ -79,7 +104,7 @@
       </view>
     </scroll-view>
     <view class="cmt-bottom-bar">
-      <input class='cmt-bottom-bar-input' placeholder="都让开我来开车！" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
+      <input class='cmt-bottom-bar-input' focus="{{focus}}" bindblur="cmtBlur" bindfocus='cmtFocus' placeholder="{{cmtInputPlaceholder}}" confirm-type="send" bindconfirm="postComment" value='{{sendInput}}'></input>
     </view>
   </view>
 </view>
