--- a/utils/main.wxss
+++ b/utils/main.wxss
@@ -576,9 +576,10 @@ button::after {
 .cmt-bottom-bar-input {
   border: 0;
   width: 90vw;
+  height: 5vh;
   border-radius: 5px;
   background: #222;
-  padding: 0 6rpx;
+  padding: 6rpx 6rpx;
   color: gray;
   font-size: 15px;
   box-sizing: border-box;
