--- a/pages/detail/ztdetail.wxss
+++ b/pages/detail/ztdetail.wxss
@@ -3,25 +3,37 @@
 @import "../../utils/main.wxss";
 
 page {
-  background-color: #f8f8f8;
-  height: 100%;
-  font-size: 32rpx;
-  line-height: 1.6;
-}
-.page-top {
-  background-color: #efeff4;
-}
-.mui-bottom{
-  background-color: #efeff4;
+  background-color: white;
+  overflow: hidden;
 }
 
-.page-body {
-  padding-top: 60rpx;
+.mui-content {
+  background-color: white;
 }
+
+.imgview {
+  position: relative;
+  width: 96%;
+  padding-bottom: 90vh;
+  text-align: center;
+  left: 2%;
+  top: 1%;
+  align-content: center;
+}
+
+.imgview image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate( -50%, -50%);
+    height: 100%;
+}
+
 
 .page-section {
   width: 100%;
-  background-color: #000;
 }
 
 .page-section_center {
@@ -57,30 +69,12 @@ page {
 }
 
 swiper {
-  height: 92vw;
+  height: 92vh;
+  background-color: black;
 }
 
-.imgview {
-  position: relative;
-  width: 96%;
-  padding-bottom: 90%;
+.iconfont{
   text-align: center;
-  left: 2%;
-  top: 1%;
-  align-content: center;
-}
-
-.imgview image {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-  -moz-transform: translate(-50%, 0);
-  transform: translate(-50%, 0);
-  height: 100%;
-}
-
-.text-img-bottom{
-  text-align: center;
-  color: #efeff4;
+  color: rgb(168, 184, 189);
+  font-size: 60rpx;
 }
